--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,8 +4,10 @@ on:
   workflow_dispatch:
   push:
   schedule:
+    - cron: 16 2 * * *
+    - cron: 37 14 * * *
     - cron: 10 16 * * *
-
+    
 jobs:
   run:
     runs-on: ubuntu-latest
